# tradebuddy

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  TASKS.md  docker-compose.yml
.data/state/: paper_trading.sqlite3
.github/workflows/: publish-image.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/.data/state/: market_snapshot.json  paper_trading.sqlite3
backend/scripts/: download_binance_klines.py  reset_paper_state.sh
backend/src/trading_bot/: api.py  app.py  cli.py  error_utils.py  logging_config.py  models.py  paper_store.py  runtime.py  settings.py  worker.py
backend/src/trading_bot/services/: ai.py  backtesting.py  binance_archive_download.py  binance_ws.py  exchange.py  historical_data.py  market_data.py  recommendation_cache.py  risk.py  support_resistance.py
backend/src/trading_bot/strategies/: __init__.py  base.py  grid.py  infinity_grid.py  rebalance.py
backend/tests/: test_api.py  test_backtesting.py  test_healthcheck.py  test_historical_data.py  test_market_data.py  test_runtime.py  test_strategies.py  test_worker.py
deploy/once/: supervisord.conf
docs/: README.md  grid-strategy-diagram.mmd  infinity-grid-strategy-diagram.mmd  rebalance-strategy-diagram.mmd
frontend/: .dockerignore  .env.example  Dockerfile  generated-page.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: router.tsx
frontend/src/components/: backtest-equity-chart.tsx  bot-control-modal.tsx  market-connection-badge.tsx  protected-shell.tsx  showcase.tsx
frontend/src/lib/: i18n.ts  (+4 more)
(+19 files in other folders)
